--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,5 +35,9 @@
         <activity
             android:name=".RegisterActivity"
             android:exported="false"/>
+
+        <activity android:name=".AvatarActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
     </application>
 </manifest>
