--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,24 +19,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PodoVS">
 
+        <!-- Launcher en vertical -->
         <activity
             android:name=".LoginActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
+        <!-- Resto de pantallas en vertical -->
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:screenOrientation="portrait"/>
 
         <activity
             android:name=".RegisterActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:screenOrientation="portrait"/>
 
-        <activity android:name=".AvatarActivity"
+        <activity
+            android:name=".AvatarActivity"
             android:exported="false"
             android:screenOrientation="portrait"/>
     </application>
