--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
     <!-- NECESARIO PARA ADMOB -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <!-- WAKE LOCK para mantener CPU vivo y seguir recibiendo pasos con pantalla apagada -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <!-- Declaramos features como opcionales -->
     <uses-feature
         android:name="android.hardware.sensor.stepcounter"
